# static-hash-index

./: .gitignore  README.md  documentation.md  main.py  pyproject.toml
core/: __init__.py  bucket.py  hash_function.py  hash_index.py  page.py  table_scan.py
docs/: CLAUDE.md  flow.md
ui/: __init__.py  main_window.py
ui/panels/: __init__.py  index_panel.py  load_panel.py  search_panel.py  stats_panel.py
